# my-locco-bites

./: .gitignore  LICENSE
backend/: .env.example  .flake8  .gitignore  .pylintrc  pyproject.toml  setup.py
backend/app/: __init__.py  asgi.py  main.py  wsgi.py
backend/app/config/: __init__.py  cache.py  celery_config.py  cors.py  database.py  logging.py  security.py  settings.py
backend/app/core/: __init__.py  constants.py  decorators.py  enums.py  exceptions.py  security.py  timezone.py
backend/app/db/: __init__.py  base.py  init_db.py  migrations.py  mongodb_client.py  redis_client.py  session.py
backend/requirements/: base.txt  ci.txt  dev.txt  prod.txt  test.txt
frontend/: .env.example  .env.test  .eslintrc.json  .gitignore  .prettierrc  README.md  commitlint.config.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/public/: manifest.json  robots.txt  sitemap.xml
frontend/src/config/: routes.ts
frontend/src/styles/: GlobalStyles.tsx  theme.ts
frontend/src/utils/: constants.ts
